Small change. WordPress version 3.1 no longer a requirement. Minor changes to button box alignment.

--- a/css/update-from-bottom.admin.css
+++ b/css/update-from-bottom.admin.css
@@ -1,7 +1,7 @@
 #updatefrombottom {
 	position: fixed;
-	bottom: 80px;
-	right: 30px;
+	bottom: 40px;
+	right: 20px;
 	text-align: right;
 	width: 230px;
 	z-index: 100;
